--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,8 @@ DB_NAME=db_name
 
 HTTP_ADDR=":8080"
 
+REDIS_ADDR="redis_container:6379"
 # нужно сгенерировать свой!: openssl rand -base64 32
 JWT_SECRET=drtyjjgsbhdafrwAE0GAEWRTI0-034;LPOKGARKP=-
+
+CHAT_ID=1234567890 # Для теста
