--- a/compose.yml
+++ b/compose.yml
@@ -29,6 +29,9 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_started
+
     env_file:
       - .env
     environment:
@@ -38,6 +41,14 @@ services:
     restart: unless-stopped
     ports:
       - 8080:8080
+
+  redis:
+    image: redis:latest
+    container_name: redis_container
+    restart: always
+    ports:
+      - "6379:6379"
+    command: redis-server --save 60 1 --loglevel warning
 
 
 volumes:
